<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">
    <EditText
        android:id="@+id/Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addCategory"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textMainColor"
        android:backgroundTint="?attr/textMainColor"/>
    <EditText
        android:id="@+id/Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addPrice"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textMainColor"
        android:backgroundTint="?attr/textMainColor"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/Income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioIncome"
            android:textSize="20sp"
            android:textColor="?attr/textMainColor"
            android:buttonTint="?attr/accentColor"/>
        <RadioButton
            android:id="@+id/Expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioExpense"
            android:textSize="20sp"
            android:textColor="?attr/textMainColor"
            android:buttonTint="?attr/accentColor"/>

    </RadioGroup>
    <Button
        android:id="@+id/AddIncomeExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/buttonEnter"
        android:textSize="24sp"
        android:onClick="CloseDialog"
        android:background="@drawable/button_enable"
        android:textColor="@color/textWhite"/>
</LinearLayout>