<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="?attr/mainBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/setupBalance"
        android:textSize="34sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="?attr/textMainColor"/>
    <EditText
        android:id="@+id/Balance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/balance"
        android:inputType="number"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textMainColor"
        android:backgroundTint="?attr/textMainColor"/>
    <Switch
        android:id="@+id/NightMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nightMode"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="?attr/textMainColor"/>
    <Button
        android:id="@+id/Save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/buttonSave"
        android:textSize="24sp"
        android:textColor="@color/textWhite"
        android:onClick="saveSetting"
        android:background="@drawable/button_disable"/>

</LinearLayout>