<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="?attr/mainBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="?attr/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialBalance"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="28sp"
            android:textColor="?attr/textMainColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Balance"
            android:text="$"
            android:textSize="34sp"
            android:textColor="?attr/textColor"/>
        <TextView
            android:id="@+id/Balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialBalanceNumber"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="?attr/textColor"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="?attr/backgroundMain">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:text="History"
            android:textSize="28sp"
            android:textColor="?attr/textMainColor"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/ItemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:dividerHeight="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="?attr/backgroundColor"
        android:divider="@color/colorPrimary"
        />
    <Button
        android:id="@+id/IncomeExpenseDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/buttonAddDialog"
        android:textSize="24sp"
        android:textColor="@color/textWhite"
        android:onClick="OpenDialog"/>
</LinearLayout>